--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MORE</title>
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to MORE</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="home">
-                <h2>Home</h2>
-                <p>Welcome to our website.</p>
-            </section>
-            <section id="about">
-                <h2>About</h2>
-                <p>Learn more about us.</p>
-            </section>
-            <section id="services">
-                <h2>Services</h2>
-                <p>Discover our services.</p>
-            </section>
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Get in touch with us.</p>
-            </section>
-        </main>
-        <footer>
-            <p>&copy; 2024 MORE. All rights reserved.</p>
-        </footer>
-        <script src="js/scripts.js"></script>
-    </body>
-    </html>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="MORE • Your source for amazing content.">
+    <title>MORE</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to MORE</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Welcome to our website.</p>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <p>Learn more about us.</p>
+        </section>
+        <section id="services">
+            <h2>Services</h2>
+            <p>Discover our services.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Get in touch with us.</p>
+            <button id="alertButton">Click Me</button>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 MORE. All rights reserved.</p>
+    </footer>
+    <script src="js/scripts.js"></script>
+</body>
+</html>
